--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="android.com.herramientime">
 
     <application
-        android:allowBackup="true"
         android:name=".app.HerramienTimeApp"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -13,39 +13,20 @@
         <activity
             android:name="android.com.herramientime.modules.domain.view.impl.MainActivityImpl"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:launchMode="singleTop"
             android:screenOrientation="sensor"
             android:windowSoftInputMode="stateHidden|adjustResize">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="@string/EXTRA_PRESENTER_DEFAULT"
+                android:value="android.com.herramientime.modules.domain.presenter.impl.MainActivityPresenterImpl" />
         </activity>
 
     </application>
-    <!--
-
-    <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="@string/google_api_key" />
-
-    <meta-data
-        android:name="com.google.android.gms.version"
-        android:value="@integer/google_play_services_version" />
-
-    <service
-        android:name=".authenticator.AccountAuthenticatorService"
-        android:exported="false">
-        <intent-filter>
-            <action android:name="android.accounts.AccountAuthenticator" />
-        </intent-filter>
-
-        <meta-data
-            android:name="android.accounts.AccountAuthenticator"
-            android:resource="@xml/authenticator" />
-    </service>
-    -->
 
 
 </manifest>
