--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,16 @@ android {
             it.resValue "string", "EXTRA_PRESENTER_DEFAULT", '"android.com.herramientime.core.presenter.MvpPresenterArgument.PRESENTER_DEFAULT"'
         }
     }
+
+    flavorDimensions "default"
+
+    productFlavors {
+        dev {
+        }
+        fake {
+        }
+    }
+
     android {
         configurations.all {
             resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
@@ -31,13 +41,20 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.+'
     implementation 'com.android.support:design:26.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    //retrofit && OKHTTP3
+    implementation "com.squareup.retrofit2:retrofit:2.5.0"
+    // JSON Converter
+    implementation "com.squareup.retrofit2:converter-gson:2.5.0"
     implementation 'com.google.dagger:dagger-android-support:2.10'
     testImplementation 'junit:junit:4.12'
     implementation 'javax.inject:javax.inject:1'
+    implementation project(path: ':rest')
 }
+
+apply plugin: 'com.google.gms.google-services'
