--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="android.com.herramientime">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".app.HerramienTimeApp"
         android:allowBackup="true"
