--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -35,13 +35,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
     //retrofit && OKHTTP3
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
     // JSON Converter
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
-    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.2', {
+    implementation "android.arch.work:work-runtime:1.0.0-alpha11"
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
