--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,16 +44,21 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.+'
     implementation 'com.android.support:design:26.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:cardview-v7:26.+'
     //retrofit && OKHTTP3
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
     // JSON Converter
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
-    implementation 'com.google.dagger:dagger-android-support:2.10'
     testImplementation 'junit:junit:4.12'
-    implementation 'javax.inject:javax.inject:1'
+    implementation(name: "task-release-7.0.1-29ffc1e", ext: 'aar')
+    implementation(name: "utils-release-4.3.0", ext: 'aar')
+    implementation(name: "di-release-1.2.1", ext: 'aar')
+    implementation 'com.github.bumptech.glide:glide:3.5.2'
+    implementation 'com.android.support:support-v4:26.0.0'
     implementation project(path: ':rest')
 }
 
