--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
     // JSON Converter
     implementation "com.squareup.retrofit2:converter-gson:2.5.0"
+    implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation "android.arch.work:work-runtime:1.0.0-alpha11"
     androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
