--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "android.com.herramientime"
@@ -45,10 +45,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:26.+'
-    implementation 'com.android.support:design:26.+'
+    implementation 'com.android.support:appcompat-v7:28.+'
+    implementation 'com.android.support:design:28.+'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:cardview-v7:26.+'
+    implementation 'com.android.support:cardview-v7:28.+'
     //retrofit && OKHTTP3
     implementation "com.squareup.retrofit2:retrofit:2.5.0"
     // JSON Converter
@@ -58,8 +58,13 @@ dependencies {
     implementation(name: "utils-release-4.3.0", ext: 'aar')
     implementation(name: "di-release-1.2.1", ext: 'aar')
     implementation 'com.github.bumptech.glide:glide:3.5.2'
-    implementation 'com.android.support:support-v4:26.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
+    implementation 'pub.devrel:easypermissions:2.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation project(path: ':rest')
 }
 
 apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
