--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
                 android:value="android.com.herramientime.modules.domain.presenter.impl.MainActivityPresenterImpl" />
         </activity>
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBEg1ZVwksmPsc_NL5ZgZg1fBuTl49n6hA" />
+
     </application>
 
 
