--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         <activity
             android:name="android.com.herramientime.modules.domain.view.impl.MainActivityImpl"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="sensor"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize">
 
             <intent-filter>
